@@ -1,0 +1,2 @@
+Miscellaneous functions commonly used in other packages maintained by
+'Yihui Xie'.
