@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 01:29:17 brook Exp $
+
+CATEGORIES=	devel R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/xfun/
+COMMENT=	Miscellaneous functions by 'Yihui Xie'
+LICENSE=	mit
+
+R_PKGNAME=	xfun
+R_PKGVER=	0.8
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
