@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3086 2019/07/31 01:26:53 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3087 2019/07/31 01:29:16 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5043,3 +5043,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-rio version 0.5.16 [brook 2019-07-31]
 	Added devel/R-tcltk2 version 1.2.11 [brook 2019-07-31]
 	Added devel/R-withr version 2.1.2 [brook 2019-07-31]
+	Added devel/R-xfun version 0.8 [brook 2019-07-31]
